[project]
name = "exam-smith"
version = "0.1.0"
description = "ExamSmith: 試験問題作成アプリ"
authors = [{ name = "Hirohiko Nakui", email = "" }]
dependencies = []
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
